// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskPanel renders correctly when it is a canceled DISKCONTENTEXPORT task 1`] = `
<div class="task-panel task-panel-sm">
  <div class="icon">
    <transition-stub mode="out-in"><svg viewBox="0 0 24 24" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="" style="fill: #D21E00;">
        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"></path>
      </svg></transition-stub>
  </div>
  <div class="details">
    <p class="details-status" style="color: rgb(102, 102, 102);">
      Canceled
    </p>
    <h2 class="details-description">
      Export resources from 'Canceled disk export channel test'
    </h2>
    <!---->
    <p class="details-size">
      500 resources (5 KB)
    </p>
    <p class="details-startedby" style="color: rgb(102, 102, 102);">
      Started by 'Tester'
    </p>
  </div>
  <div class="buttons"><button dir="auto" type="button" tabindex="0" class="button KButton-noKey-0_170m2tm">
      <!---->
      <!----> <span class="link-text">Clear</span>
      <!---->
      <!----></button></div>
</div>
`;

exports[`TaskPanel renders correctly when it is a canceled DISKEXPORT task (bulk export) 1`] = `
<div class="task-panel task-panel-sm">
  <div class="icon">
    <transition-stub mode="out-in"><svg viewBox="0 0 24 24" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="" style="fill: #D21E00;">
        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"></path>
      </svg></transition-stub>
  </div>
  <div class="details">
    <p class="details-status" style="color: rgb(102, 102, 102);">
      Canceled
    </p>
    <h2 class="details-description">
      Export 'Canceled disk export channel test'
    </h2>
    <!---->
    <p class="details-size">
      500 resources (5 KB)
    </p>
    <p class="details-startedby" style="color: rgb(102, 102, 102);">
      Started by 'Tester'
    </p>
  </div>
  <div class="buttons"><button dir="auto" type="button" tabindex="0" class="button KButton-noKey-0_170m2tm">
      <!---->
      <!----> <span class="link-text">Clear</span>
      <!---->
      <!----></button></div>
</div>
`;
